--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -114,9 +114,9 @@
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/leaflet/dist/leaflet.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
-              
             ],
             "scripts": []
           }
