--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,8 +6,7 @@
       "outDir": "./built",
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
-      "esModuleInterop": true,
-      "allowImportingTsExtensions": true,
+      "esModuleInterop": true
     },
     "include": ["src/**/*"],
 }
