--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,14 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
-    "typescript": "^5.1.6"
-  },
-  "devDependencies": {
+    "typescript": "^5.1.6",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
