--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build":  "npm install --force && ng build --configuration production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build":  "npm install --force && ng build --configuration production"
+
   },
   "private": true,
   "dependencies": {
@@ -24,20 +23,20 @@
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
-  },
-  "devDependencies": {
+    "zone.js": "~0.13.0",
     "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "typescript": "~5.1.3"
+  },
+  "devDependencies": {
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "karma-jasmine-html-reporter": "~2.1.0"
   }
 }
