edit-account-page && orders-page implemented

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,2 +1,5 @@
 DB_CONN=mongodb+srv://lid:Ilove2read@cluster0.ehjxidy.mongodb.net/web-store?retryWrites=true&w=majority
 TOKEN_KEY=UnserSuperSchweresUndUnknackbaresPasswort!
+CLOUD_NAME=dv3g1lcnc
+CLOUD_KEY=999516667854143
+CLOUD_SECRET=0stlCXJbwcP-_j3t9a9W37qOYR8
