--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,12 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "leaflet": "^1.9.4",
+    "ng-particles": "^3.12.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
     "typescript": "~5.1.3",
     "zone.js": "~0.13.0"
   },
