--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,11 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "nodemailer": "^6.9.4",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.9",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
