--- a/backend/src/.env
+++ b/backend/src/.env
@@ -3,4 +3,4 @@ TOKEN_KEY=UnserSuperSchweresUndUnknackbaresPasswort!
 CLOUD_NAME=dv3g1lcnc
 CLOUD_KEY=999516667854143
 CLOUD_SECRET=0stlCXJbwcP-_j3t9a9W37qOYR8
-LIVE_URL=https://web-store-85da.onrender.com
+LIVE_URL=http://localhost:4200
