--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "^16.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "bootstrap": "^5.2.3",
+    "google-libphonenumber": "^3.2.33",
     "leaflet": "^1.9.4",
     "ng-particles": "^3.12.0",
+    "ngx-bootstrap": "^11.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
